fixed body border, wrap negative margin junk

--- a/app/stylesheets/_core.sass
+++ b/app/stylesheets/_core.sass
@@ -22,7 +22,6 @@ $ninesixty-columns: 24
 $ninesixty-gutter-width: 10px
 
 body
-  // border-top: 7px solid $topColor
   min-width: 960px
   color: $primaryTextColor
   text-rendering: optimizeLegibility
@@ -43,7 +42,6 @@ a
 #wrap
   position: relative
   margin:
-    top: -7px
     left: auto
     right: auto
   overflow: hidden
